--- a/my-first-web-page.html
+++ b/my-first-web-page.html
@@ -5,11 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Web Page</title>
+    <style>
+        /* Change heading color to blue */
+        h1 {
+            color: blue;
+        }
+
+        /* Style the content inside a box */
+        .content-box {
+            border: 2px solid black; /* Border for the box */
+            padding: 20px; /* Padding inside the box */
+            width: 300px; /* Width of the box */
+            margin: 0 auto; /* Center the box on the page */
+            background-color: #f9f9f9; /* Light background color for the box */
+            border-radius: 10px; /* Rounded corners */
+        }
+    </style>
 </head>
 <body>
+    <!-- Main heading -->
     <h1>Welcome to My First Web Page!</h1>
-    <p>Username: me368</p>
-    <p>Course Name: IS 117</p>
-    <p>Section: 001</p>
+
+    <!-- Content inside a box -->
+    <div class="content-box">
+        <p>Username: me368</p>
+        <p>Course Name: IS 117</p>
+        <p>Section: 001</p>
+    </div>
 </body>
 </html>
