--- a/my-first-web-page.html
+++ b/my-first-web-page.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Web Page</title>
     <style>
-        /* Change heading color to blue */
+        /* Change heading color to blue and center it */
         h1 {
             color: blue;
+            text-align: center; /* Centers the heading */
         }
 
         /* Style the content inside a box */
@@ -16,7 +17,7 @@
             border: 2px solid black; /* Border for the box */
             padding: 20px; /* Padding inside the box */
             width: 300px; /* Width of the box */
-            margin: 0 auto; /* Center the box on the page */
+            margin: 0 auto; /* Center the box horizontally */
             background-color: #f9f9f9; /* Light background color for the box */
             border-radius: 10px; /* Rounded corners */
         }
@@ -34,3 +35,4 @@
     </div>
 </body>
 </html>
+
