--- a/my-first-web-page.html
+++ b/my-first-web-page.html
@@ -17,9 +17,9 @@
             border: 2px solid black; /* Border for the box */
             padding: 20px; /* Padding inside the box */
             width: 300px; /* Width of the box */
-            margin: 0 auto; /* Center the box horizontally */
             background-color: #f9f9f9; /* Light background color for the box */
             border-radius: 10px; /* Rounded corners */
+            margin-top: 20px; /* Adds space between the heading and the box */
         }
     </style>
 </head>
@@ -27,7 +27,7 @@
     <!-- Main heading -->
     <h1>Welcome to My First Web Page!</h1>
 
-    <!-- Content inside a box -->
+    <!-- Content inside a box aligned to the left side -->
     <div class="content-box">
         <p>Username: me368</p>
         <p>Course Name: IS 117</p>
@@ -35,4 +35,5 @@
     </div>
 </body>
 </html>
+
 
